Padding was bothering me fixed bug on mobile

--- a/public/styles/main_mobile.css
+++ b/public/styles/main_mobile.css
@@ -31,6 +31,10 @@
 		margin: 0 auto;
 	}
 
+	.product-overview {
+		padding: 80px 0 100px;
+	}
+
 	.oneclick-window {
 		display: none;
 	}
@@ -193,7 +197,6 @@
 	.order-grid li:nth-child(4n+4) .order-box {
 		margin: 0 15px 15px 0;
 	}
-
 
 }
 
@@ -572,5 +575,9 @@
 
 	.feedback {
 		padding: 150px 15px 100px;
+	}
+
+	.checklist {
+		width: auto;
 	}
 }
